--- a/src/app/pages/automotive-service/automotive-service.component.html
+++ b/src/app/pages/automotive-service/automotive-service.component.html
@@ -20,7 +20,7 @@
       <div class="card border border-0 rounded-0 mb-4">
         <img src="./assets/Automotive/car-service.png" class="card-img border border-5" alt="..." height="300">
         <div class="card-img-overlay text-center flex-column justify-content-center">
-          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">Car Service</button>
+          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase" routerLink="/pages/store-list">Car Service</button>
         </div>
 
       </div>
@@ -31,7 +31,7 @@
       <div class="card border border-0 rounded-0 mb-4">
         <img src="./assets/Automotive/bike-service.png" class="card-img border border-5" alt="..." height="300">
         <div class="card-img-overlay text-center flex-column justify-content-center">
-          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">Bike Service</button>
+          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase" routerLink="/pages/store-list">Bike Service</button>
         </div>
 
       </div>
