--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,10 +19,10 @@
       <div class="row g-3">
         <div class="col-md-4">
           <div class="service-area" role="Residential">
-            <div class="card border border-0 rounded-0 mb-4">
+            <div class="card border border-0 rounded-0 mb-4" routerLink="/pages/residential">
               <img src="./assets/banner/residential.png" class="card-img border border-5" alt="..." height="300">
               <div class="card-img-overlay text-center flex-column justify-content-center">
-                <button routerLink="/pages/residential"
+                <button
                   class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">Residential
                   Service</button>
               </div>
@@ -33,10 +33,10 @@
 
         <div class="col-md-4">
           <div class="service-area" role="commercial">
-            <div class="card border border-0 rounded-0 mb-4">
+            <div class="card border border-0 rounded-0 mb-4"  routerLink="/pages/commercial">
               <img src="./assets/banner/commercial.png" class="card-img border border-5" alt="..." height="300">
               <div class="card-img-overlay text-center flex-column justify-content-center">
-                <button routerLink="/pages/commercial"
+                <button
                   class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">commercial Service</button>
               </div>
 
@@ -45,10 +45,10 @@
         </div>
         <div class="col-md-4">
           <div class="service-area" role="commercial">
-            <div class="card border border-0 rounded-0 mb-4">
+            <div class="card border border-0 rounded-0 mb-4"  routerLink="/pages/automotive">
               <img src="./assets/banner/automative.png" class="card-img border border-5" alt="..." height="300">
               <div class="card-img-overlay text-center flex-column justify-content-center">
-                <button routerLink="/pages/automotive"
+                <button
                   class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">automotive Service</button>
               </div>
 
