--- a/src/app/pages/automotive-service/automotive-service.component.html
+++ b/src/app/pages/automotive-service/automotive-service.component.html
@@ -67,6 +67,17 @@
 
       </div>
     </div>
+
+    <div class="col-md-4">
+      <div class="card border border-0 rounded-0 mb-4">
+        <img src="./assets/Automotive/towing-service.png" class="card-img border border-5" alt="..." height="300">
+        <div class="card-img-overlay text-center flex-column justify-content-center">
+          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase" routerLink="/pages/store-list">towing Service</button>
+        </div>
+
+      </div>
+    </div>
+
   </div>
 </div>
 
