--- a/src/app/pages/residential-service/residential-service.component.html
+++ b/src/app/pages/residential-service/residential-service.component.html
@@ -51,12 +51,21 @@
       <div class="card border border-0 rounded-0 mb-4">
         <img src="./assets/Residential/Cooking.png" class="card-img border border-5" alt="..." height="300">
         <div class="card-img-overlay text-center flex-column justify-content-center">
-          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">Cooking Service</button>
+          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">Catering Service</button>
         </div>
 
       </div>
     </div>
 
+    <div class="col-md-4">
+      <div class="card border border-0 rounded-0 mb-4">
+        <img src="./assets/Residential/Maintenance.png" class="card-img border border-5" alt="..." height="300">
+        <div class="card-img-overlay text-center flex-column justify-content-center">
+          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">Maintenance Service</button>
+        </div>
+
+      </div>
+    </div>
 
     <div class="col-md-4">
       <div class="card border border-0 rounded-0 mb-4">
