--- a/src/app/pages/store-details/store-details.component.html
+++ b/src/app/pages/store-details/store-details.component.html
@@ -1,8 +1,10 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb ps-5 py-3 bg-light">
     <li class="breadcrumb-item"><a class="text-decoration-none text-dark fw-semibold" routerLink="/home">Home</a></li>
-    <li class="breadcrumb-item"><a class="text-decoration-none text-dark  fw-semibold" routerLink="/pages/automotive">Automotive Service</a></li>
-    <li class="breadcrumb-item"><a class="text-decoration-none text-dark  fw-semibold" routerLink="/home">Store List</a></li>
+    <li class="breadcrumb-item"><a class="text-decoration-none text-dark  fw-semibold"
+        routerLink="/pages/automotive">Automotive Service</a></li>
+    <li class="breadcrumb-item"><a class="text-decoration-none text-dark  fw-semibold" routerLink="/pages/store-list">Store List</a>
+    </li>
     <li class="breadcrumb-item active fw-semibold text-primary" aria-current="page">Store Details</li>
   </ol>
 </nav>
@@ -11,7 +13,22 @@
     <div class="row">
       <div class="col-md-12">
         <div class="store-banner ">
-          <img src="./assets/store-details/store-banner.png" alt="store-image" class="store-image border border-4">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="./assets/store-details/store-banner.png" class="d-block w-100 store-image border border-4"
+                  alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img src="./assets/store-details/banner-2.png" class="d-block w-100 store-image border border-4"
+                  alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="./assets/store-details/banner-3.png" class="d-block w-100 store-image border border-4"
+                  alt="...">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -77,13 +94,13 @@
                   <p class="store-desc-hours fst-italic text-decoration-underline fw-bold text-secondary">Store Opening
                     and Closing hours</p>
                   <div class="g-3">
-                    <p class="fw-semibold text-secondary">Monday : 10:00 AM to 07:00 PM </p>
-                    <p class="fw-semibold text-secondary">Tuesday : 10:00 AM to 07:00 PM </p>
-                    <p class="fw-semibold text-secondary">Wednesday : 10:00 AM to 07:00 PM </p>
-                    <p class="fw-semibold text-secondary">Thursday : 10:00 AM to 07:00 PM </p>
-                    <p class="fw-semibold text-secondary">Friday : 10:00 AM to 07:00 PM </p>
-                    <p class="fw-semibold text-secondary">Saturday : 10:00 AM to 07:00 PM </p>
-                    <p class="fw-semibold text-secondary">Sunday : closed </p>
+                    <p class="fw-semibold text-secondary">Monday &nbsp; &nbsp; &nbsp; : 10:00 AM to 07:00 PM </p>
+                    <p class="fw-semibold text-secondary">Tuesday &nbsp; &nbsp; &nbsp; &nbsp;: 10:00 AM to 07:00 PM </p>
+                    <p class="fw-semibold text-secondary">Wednesday &nbsp;: 10:00 AM to 07:00 PM </p>
+                    <p class="fw-semibold text-secondary">Thursday &nbsp; &nbsp; &nbsp;: 10:00 AM to 07:00 PM </p>
+                    <p class="fw-semibold text-secondary">Friday &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; : 10:00 AM to 07:00 PM </p>
+                    <p class="fw-semibold text-secondary">Saturday &nbsp; &nbsp; &nbsp; : 10:00 AM to 07:00 PM </p>
+                    <p class="fw-semibold text-secondary">Sunday &nbsp; &nbsp; &nbsp; &nbsp; : closed </p>
                   </div>
                 </div>
               </div>
@@ -114,6 +131,8 @@
                   <a href="https://wa.me/918939799975" target="_blank"> <button type="button"
                       class="btn mt-3 btn-size fw-bold btn-outline-success"><i class="fa fw-bold fa-whatsapp"
                         aria-hidden="true"></i>&nbsp; Chat with Store Owner</button></a>
+                        <button type="button" class="mt-3 btn btn-size fw-bold btn-outline-danger"><i class="fa fa-telegram"
+                          aria-hidden="true"></i>&nbsp; Share Store Details</button>
                 </div>
               </div>
             </div>
@@ -134,9 +153,188 @@
               </div>
             </div>
             <!-------------------------------------->
+
+            <!---------------------------report id-------------->
+            <div class="bg-white rounded-3 py-3 mt-3">
+              <h4 class="fw-semibold pt-2 text-secondary ps-4"><i class="fa fa-exclamation-triangle"
+                  aria-hidden="true"></i>
+                &nbsp;Report</h4>
+              <hr>
+              <div class="row store-route">
+                <div class="col-md-12  text-center">
+                  <p class="fw-semibold text-secondary  store-desc-details px-3">Incase this store are fake or any illegal activities you find please report the store.</p>
+
+                  <!-- <p class="fw-semibold text-secondary">Do you want report this store ?</p>--><button type="button"
+                    class="btn mt-2 fw-bold btn-outline-danger"><i class="fa fa-exclamation-circle"
+                      aria-hidden="true"></i>
+                    Report</button>
+                </div>
+              </div>
+            </div>
+            <!-------------------------------------->
+
           </div>
+        </div>
+      </div>
+
+      <div class="col-md-12">
+        <div class="client-page-review">
+
         </div>
       </div>
     </div>
   </div>
+
+  <!-----------------------------------------------------------------------clients --------------------------------------------------->
+
+  <div class="bg-light">
+    <div class="container space">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="text-center">
+            <h1 class="fs-1 fw-bold" style="color: #276B6A ">
+              We Served Over 5000+ <br />
+              Customers
+            </h1>
+            <p class="clients-top fw-semibold text-secondary fst-italic">
+              “Take care of your car in the garage, and the car will take care of you on the road.”
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-0">
+        <div class="col-md-12">
+          <section id="testimonials">
+            <div class="testimonials-heading">
+              <h1>Customer Says</h1>
+            </div>
+
+            <div class="testimonials-box-container ">
+              <div class="testimonial-box rounded-3">
+                <div class="box-top">
+                  <div class="profile">
+                    <div class="profile-img">
+                      <img src="./assets/user/user-1.jpeg" alt="img-1" />
+                    </div>
+                    <div class="name-user">
+                      <strong>Ijaz Khan</strong>
+                      <span>@infoonclickijaz</span>
+                    </div>
+                  </div>
+                  <div class="reviews">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                  </div>
+                </div>
+
+                <div class="client-comment">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+                    ad dolor inventore ab, exercitationem minima odit. Quis fugiat
+                    deserunt praesentium suscipit obcaecati laboriosam, illum
+                    reiciendis. A debitis aspernatur nulla error!
+                  </p>
+                </div>
+              </div>
+
+              <div class="testimonial-box rounded-3">
+                <div class="box-top">
+                  <div class="profile">
+                    <div class="profile-img">
+                      <img src="./assets/user/user-2.jpeg" alt="img-2" />
+                    </div>
+                    <div class="name-user">
+                      <strong>Mohammed Irsath</strong>
+                      <span>@infoonclickirsath</span>
+                    </div>
+                  </div>
+                  <div class="reviews">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                  </div>
+                </div>
+
+                <div class="client-comment">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+                    ad dolor inventore ab, exercitationem minima odit. Quis fugiat
+                    deserunt praesentium suscipit obcaecati laboriosam, illum
+                    reiciendis. A debitis aspernatur nulla error!
+                  </p>
+                </div>
+              </div>
+
+              <div class="testimonial-box rounded-3">
+                <div class="box-top">
+                  <div class="profile">
+                    <div class="profile-img">
+                      <img src="./assets/user/user-3.jpeg" alt="img-3" />
+                    </div>
+                    <div class="name-user">
+                      <strong>Wasim</strong>
+                      <span>@happenswasim</span>
+                    </div>
+                  </div>
+                  <div class="reviews">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                  </div>
+                </div>
+
+                <div class="client-comment">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+                    ad dolor inventore ab, exercitationem minima odit. Quis fugiat
+                    deserunt praesentium suscipit obcaecati laboriosam, illum
+                    reiciendis. A debitis aspernatur nulla error!
+                  </p>
+                </div>
+              </div>
+
+              <div class="testimonial-box rounded-3">
+                <div class="box-top">
+                  <div class="profile">
+                    <div class="profile-img">
+                      <img src="./assets/user/user-4.jpeg" alt="img-4" />
+                    </div>
+                    <div class="name-user">
+                      <strong>Akram</strong>
+                      <span>@Mr.jiffyakram</span>
+                    </div>
+                  </div>
+                  <div class="reviews">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                  </div>
+                </div>
+
+                <div class="client-comment">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+                    ad dolor inventore ab, exercitationem minima odit. Quis fugiat
+                    deserunt praesentium suscipit obcaecati laboriosam, illum
+                    reiciendis. A debitis aspernatur nulla error!
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--------------------------------------------------------------------------end------------------------------------------------------>
 </div>
