--- a/src/app/pages/store-list/store-list.component.scss
+++ b/src/app/pages/store-list/store-list.component.scss
@@ -2,16 +2,16 @@
 {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
-.btn-size{
-  width: 200px;
-  height: 40px;
-}
+// .btn-size{
+//   width: 200px;
+//   height: 40px;
+// }
 .reviews{
   color: #f9d71c;
 }
 .img-size{
   width: 100%;
-  height: 180px;
+  height: 155px;
 }
 .store-img-size
 {
@@ -24,3 +24,20 @@ height: 120px;
 .highlighted{
   color: red;
 }
+.form-size{
+  height: 300px;
+  overflow-y: scroll;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
