--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
+<ng-content></ng-content>
 <router-outlet  (activate)="onActive()"></router-outlet>
 <app-footer></app-footer>
