--- a/src/app/pages/automotive-service/automotive-service.component.html
+++ b/src/app/pages/automotive-service/automotive-service.component.html
@@ -17,10 +17,10 @@
 <div class="container py-5">
   <div class="row g-3">
     <div class="col-md-4">
-      <div class="card border border-0 rounded-0 mb-4">
+      <div class="card border border-0 rounded-0 mb-4" routerLink="/pages/store-list">
         <img src="./assets/Automotive/car-service.png" class="card-img border border-5" alt="..." height="300">
         <div class="card-img-overlay text-center flex-column justify-content-center">
-          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase" routerLink="/pages/store-list">Car Service</button>
+          <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase" >Car Service</button>
         </div>
 
       </div>
@@ -28,7 +28,7 @@
 
 
     <div class="col-md-4">
-      <div class="card border border-0 rounded-0 mb-4">
+      <div class="card border border-0 rounded-0 mb-4" routerLink="/pages/store-list">
         <img src="./assets/Automotive/bike-service.png" class="card-img border border-5" alt="..." height="300">
         <div class="card-img-overlay text-center flex-column justify-content-center">
           <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase" routerLink="/pages/store-list">Bike Service</button>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="col-md-4">
-      <div class="card border border-0 rounded-0 mb-4">
+      <div class="card border border-0 rounded-0 mb-4" routerLink="/pages/store-list">
         <img src="./assets/Automotive/van-service.png" class="card-img border border-5" alt="..." height="300">
         <div class="card-img-overlay text-center flex-column justify-content-center">
           <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">van Service</button>
@@ -48,7 +48,7 @@
     </div>
 
     <div class="col-md-4">
-      <div class="card border border-0 rounded-0 mb-4">
+      <div class="card border border-0 rounded-0 mb-4" routerLink="/pages/store-list">
         <img src="./assets/Automotive/truck-service.png" class="card-img border border-5" alt="..." height="300">
         <div class="card-img-overlay text-center flex-column justify-content-center">
           <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">truck Service</button>
@@ -59,7 +59,7 @@
 
 
     <div class="col-md-4">
-      <div class="card border border-0 rounded-0 mb-4">
+      <div class="card border border-0 rounded-0 mb-4" routerLink="/pages/store-list">
         <img src="./assets/Automotive/bus-service.png" class="card-img border border-5" alt="..." height="300">
         <div class="card-img-overlay text-center flex-column justify-content-center">
           <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase">bus Service</button>
@@ -69,7 +69,7 @@
     </div>
 
     <div class="col-md-4">
-      <div class="card border border-0 rounded-0 mb-4">
+      <div class="card border border-0 rounded-0 mb-4" routerLink="/pages/store-list">
         <img src="./assets/Automotive/towing-service.png" class="card-img border border-5" alt="..." height="300">
         <div class="card-img-overlay text-center flex-column justify-content-center">
           <button class="card-title btn btn-bg rounded-pill fw-semibold px-5 text-white text-uppercase" routerLink="/pages/store-list">towing Service</button>
